  was added.


2.9.5: (released ????-??-??)
----------------------------

All:

- Add separate read/written bytes counters and per-direction NOWAIT and WAITALL
  flags to wxSocket (Rob Bresalier).
- Add wxDir::Close() method (Silverstorm82).
- Fix compilation of wxHash{Map,Set} with g++ 4.7 (Nathan Ridge).
- Fix posting large amounts of data in wxHTTP (Platonides).
- Added Nepali translation (Him Prasad Gautam).

All (GUI):

- Add wxBITMAP_PNG() macro similar to wxBITMAP() but for PNG files.
- Add new wxSimplebook class.
- Support hexadecimal numbers in wxSpinCtrl.
- Respect window max size in wxBoxSizer (Nathan Ridge).
- Add support for searching in wxWebView for MSW and GTK (Allonii).
- Add generic wxFileSystem support to wxWebView with 
  wxWebViewFSHandler (Nick Matthews).
- Add possibility to hide and show again wxRibbonBar pages (wxBen).
- Add wxRibbonBar pages highlighting (wxBen).
- Add expand/collapse button to wxRibbonBar (rakeshthp).
- Fix item data access in wxDataViewListCtrl (Kry).
- Fix problem with floating maximized AUI panes (Laurent Poujoulat).
- Add owned client data support to wxRibbonButtonBar. Notice that the client
  data now must be set using the SetItemClient{Data,Object}() methods and not
  when inserting the button (Laurent Poujoulat).
- Add wxBitmapButton::NewCloseButton().
- Add wxTextEntry::SelectNone() (troelsk).
- Restore the original wxGrid col/row size when unhiding it (Michael Richards).
- Fix text origin and extent computations in wxSVGFileDC (Neil Chittenden).
- Show tooltips for the too long items in generic wxTreeCtrl (Steven Houchins).
- Add wxStyledTextCtrl::AnnotationClearLine() (sentieshar).
- Add support for background-color style to span element in wxHTML (gevorg).
- Add "inherit" to <font> XRC tag (Steffen Olszewski, Gero Meßsysteme GmbH).

wxGTK:

- Allow building wxGTK3 with Broadway backend (Kolya Kosenko).
- Provide native implementation of wxNotificationMessage using libnotify.